test-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
